--- a/UIWPF/MainWindow.xaml
+++ b/UIWPF/MainWindow.xaml
@@ -7,6 +7,7 @@
         mc:Ignorable="d"
         Title="MainWindow"
         Height="1000"
+        WindowStartupLocation="CenterScreen"
         Width="1000">
   <Window.Resources>
     <Style TargetType="Button"
