--- a/UIWPF/MainWindow.xaml
+++ b/UIWPF/MainWindow.xaml
@@ -19,7 +19,7 @@
       <Setter Property="Height"
               Value="40"></Setter>
       <Setter Property="Width"
-              Value="200*"></Setter>
+              Value="200"></Setter>
     </Style>
     <Style TargetType="Label">
       <Setter Property="Height"
