--- a/UIWPF/MainWindow.xaml
+++ b/UIWPF/MainWindow.xaml
@@ -8,7 +8,8 @@
         Title="MainWindow"
         Height="1000"
         WindowStartupLocation="CenterScreen"
-        Width="1000">
+        Width="1000"
+        Background="DarkSlateGray">
   <Window.Resources>
     <Style TargetType="Button"
            x:Key="DefaultButtonStyles">
@@ -70,6 +71,9 @@
                   Value="0,10,0,0" />
           <Setter Property="Height"
                   Value="40"></Setter>
+          <Setter Property="Background" Value="DarkGray">
+            
+          </Setter>
         </Style>
       </StackPanel.Resources>
       <Button Content="Start Simulation"
@@ -80,24 +84,18 @@
               Click='Button_Click_2'></Button>
       <Button Content="Make Simulation step"></Button>
     </StackPanel>
-    <ScrollViewer Grid.Column="0" Grid.Row="0" VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Visible"
-                  >
-
-      
-        <Canvas 
-                Height="1200"
-                Width="1200"
+    <ScrollViewer Grid.Column="0" Grid.Row="0" VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Visible">
+        <Canvas Height="600"
+                Width="600"
                 Name="testcanvas"
-                RenderTransformOrigin="0.5,0.25">
+                RenderTransformOrigin="0.5,0.5">
           <Canvas.RenderTransform>
             <TransformGroup>
               <ScaleTransform ScaleY="-1"
                               ScaleX="1" />
             </TransformGroup>
           </Canvas.RenderTransform>
-
         </Canvas>
-      
     </ScrollViewer>
     <StackPanel Grid.Row="0"
                 Grid.Column="1"
