--- a/UIWPF/MainWindow.xaml
+++ b/UIWPF/MainWindow.xaml
@@ -1,168 +1,109 @@
-﻿<Window x:Class="UIWPF.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:UIWPF"
-        mc:Ignorable="d"
-        Title="MainWindow"
-        Height="1000"
-        WindowStartupLocation="CenterScreen"
-        Width="1000"
-        Background="DarkSlateGray">
+﻿<Window x:Class="UIWPF.MainWindow" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:local="clr-namespace:UIWPF" mc:Ignorable="d" Title="MainWindow" Height="1000" WindowStartupLocation="CenterScreen" Width="1000" Background="DarkSlateGray">
   <Window.Resources>
-    <Style TargetType="Button"
-           x:Key="DefaultButtonStyles">
-      <Setter Property="Foreground"
-              Value="Black" />
-      <Setter Property="VerticalAlignment"
-              Value="Bottom" />
-      <Setter Property="Height"
-              Value="40"></Setter>
-      <Setter Property="Width"
-              Value="200"></Setter>
+    <Style TargetType="Button" x:Key="DefaultButtonStyles">
+      <Setter Property="Foreground" Value="Black" />
+      <Setter Property="VerticalAlignment" Value="Bottom" />
+      <Setter Property="Height" Value="40"></Setter>
+      <Setter Property="Width" Value="200"></Setter>
     </Style>
     <Style TargetType="Label">
-      <Setter Property="Height"
-              Value="25" />
+      <Setter Property="Height" Value="25" />
     </Style>
     <Style TargetType="TextBlock">
-      <Setter Property="TextWrapping"
-              Value="Wrap"></Setter>
-      <Setter Property="VerticalAlignment"
-              Value="Top"></Setter>
-      <Setter Property="HorizontalAlignment"
-              Value="Stretch"></Setter>
-      <Setter Property="Margin"
-              Value="10,0,0,0"></Setter>
+      <Setter Property="TextWrapping" Value="Wrap"></Setter>
+      <Setter Property="VerticalAlignment" Value="Top"></Setter>
+      <Setter Property="HorizontalAlignment" Value="Stretch"></Setter>
+      <Setter Property="Margin" Value="10,0,0,0"></Setter>
     </Style>
     <Style TargetType="TextBox">
-      <Setter Property="Margin"
-              Value="0,0,0,10"></Setter>
+      <Setter Property="Margin" Value="0,0,0,10"></Setter>
     </Style>
   </Window.Resources>
   <Grid>
     <Grid.ColumnDefinitions>
       <ColumnDefinition Width="600" />
-      <ColumnDefinition Width="400*" />
+      <ColumnDefinition Width="300*" />
     </Grid.ColumnDefinitions>
     <Grid.RowDefinitions>
-      <RowDefinition MinHeight='50'
-                     Height="700*"></RowDefinition>
-      <RowDefinition MinHeight='200'
-                     Height="300"></RowDefinition>
+      <RowDefinition MinHeight='50' Height="800*"></RowDefinition>
+      <RowDefinition MinHeight='200' Height="200"></RowDefinition>
     </Grid.RowDefinitions>
-    
-    <StackPanel Grid.Column="0"
-                Grid.Row="1"
-                Orientation="Horizontal">
 
-      <StackPanel Grid.Column="0"
-                  Grid.Row="1"
-                  Margin="10"
-                  Width="100">
+    <StackPanel Grid.Column="0" Grid.Row="1" Orientation="Horizontal">
+
+      <StackPanel Grid.Column="0" Grid.Row="1" Margin="10" Width="100">
         <StackPanel.Resources>
           <Style TargetType="{x:Type Button}">
-            <Setter Property="Margin"
-                    Value="0,10,0,0" />
-            <Setter Property="Height"
-                    Value="40"></Setter>
-            <Setter Property="Background"
-                    Value="DarkGray">
+            <Setter Property="Margin" Value="0,10,0,0" />
+            <Setter Property="Height" Value="25"></Setter>
+            <Setter Property="Background" Value="DarkGray">
 
             </Setter>
           </Style>
         </StackPanel.Resources>
-        <Button Content="Start Simulation"
-                Click='StartSimulationClick'></Button>
-        <Button Content="Move Wall"
-                Click='MoveWallClick'></Button>
-        <Button Content="Split Wall"
-                Click='SplitWallClick'></Button>
-        <Button Content="Switch Room"
-                Click='SwitchRoomClick'></Button>
+        <Button Content="Start Simulation" Click='StartSimulationClick'></Button>
+        <Button Content="Move Wall +" Click='MoveWallClick'></Button>
+        <Button Content="Move Wall -" Click='MoveWallClick2'></Button>
+        <Button Content="Split Wall" Click='SplitWallClick'></Button>
+        <Button Content="Switch Room" Click='SwitchRoomClick'></Button>
+        <Button Content="Load selected Room" Click='LoadSelectedClick'></Button>
         <Button Content="Make Simulation step">
         </Button>
 
       </StackPanel>
-      <StackPanel Grid.Column="0"
-                  Grid.Row="1"
-                  MaxHeight="300"
-                  Orientation='Horizontal'>
-        <DataGrid x:Name="CostGrid"
-                  ItemsSource="{Binding SimulationCosts, IsAsync=True, Mode=OneWay}"
-                  AutoGenerateColumns="False"
-                  VerticalScrollBarVisibility="Visible"
-                  MaxHeight='280'>
+      <StackPanel Grid.Column="0" Grid.Row="1" MaxHeight="300" Orientation='Horizontal'>
+        <DataGrid x:Name="CostGrid" ItemsSource="{Binding SimulationCosts, IsAsync=True, Mode=OneWay}" AutoGenerateColumns="False" VerticalScrollBarVisibility="Visible" MaxHeight='280' SelectionChanged='CostGrid_SelectionChanged' MouseDoubleClick="CostGrid_OnMouseDoubleClick">
           <DataGrid.Columns>
-            <DataGridTemplateColumn Header="Index"
-                                    Width="40">
+            <DataGridTemplateColumn Header="Index" Width="40">
               <DataGridTemplateColumn.CellTemplate>
                 <DataTemplate>
-                  <TextBlock Text="{Binding Index}"
-                             TextWrapping="Wrap" />
+                  <TextBlock Text="{Binding Index}" TextWrapping="Wrap" />
                 </DataTemplate>
               </DataGridTemplateColumn.CellTemplate>
             </DataGridTemplateColumn>
-            <DataGridTemplateColumn Header="Summary"
-                                    Width="60">
+            <DataGridTemplateColumn Header="Summary" Width="60">
               <DataGridTemplateColumn.CellTemplate>
                 <DataTemplate>
-                  <TextBlock Text="{Binding SummaryCost}"
-                             TextWrapping="Wrap" />
+                  <TextBlock Text="{Binding SummaryCost}" TextWrapping="Wrap" />
                 </DataTemplate>
               </DataGridTemplateColumn.CellTemplate>
             </DataGridTemplateColumn>
-            <DataGridTemplateColumn Header="AreaCost"
-                                    Width="60">
+            <DataGridTemplateColumn Header="AreaCost" Width="60">
               <DataGridTemplateColumn.CellTemplate>
                 <DataTemplate>
-                  <TextBlock Text="{Binding AreaCost}"
-                             TextWrapping="Wrap" />
+                  <TextBlock Text="{Binding AreaCost}" TextWrapping="Wrap" />
                 </DataTemplate>
               </DataGridTemplateColumn.CellTemplate>
             </DataGridTemplateColumn>
-            <DataGridTemplateColumn Header="LayoutCost"
-                                    Width="60">
+            <DataGridTemplateColumn Header="LayoutCost" Width="60">
               <DataGridTemplateColumn.CellTemplate>
                 <DataTemplate>
-                  <TextBlock Text="{Binding LayoutCost}"
-                             TextWrapping="Wrap" />
+                  <TextBlock Text="{Binding LayoutCost}" TextWrapping="Wrap" />
                 </DataTemplate>
               </DataGridTemplateColumn.CellTemplate>
             </DataGridTemplateColumn>
           </DataGrid.Columns>
         </DataGrid>
-        <DataGrid x:Name="CostGrid2"
-                  ItemsSource="{Binding LineAndCostActualStep, IsAsync=True, Mode=OneWay}"
-                  AutoGenerateColumns="False"
-                  VerticalScrollBarVisibility="Visible"
-                  MaxHeight='280'>
+        <DataGrid x:Name="CostGrid2" ItemsSource="{Binding LineAndCostActualStep, IsAsync=True, Mode=OneWay}" AutoGenerateColumns="False" VerticalScrollBarVisibility="Visible" MaxHeight='280'>
           <DataGrid.Columns>
-            <DataGridTemplateColumn Header="Index"
-                                    Width="40">
+            <DataGridTemplateColumn Header="Index" Width="40">
               <DataGridTemplateColumn.CellTemplate>
                 <DataTemplate>
-                  <TextBlock Text="{Binding index}"
-                             TextWrapping="Wrap" />
+                  <TextBlock Text="{Binding index}" TextWrapping="Wrap" />
                 </DataTemplate>
               </DataGridTemplateColumn.CellTemplate>
             </DataGridTemplateColumn>
-            <DataGridTemplateColumn Header="line"
-                                    Width="120">
+            <DataGridTemplateColumn Header="line" Width="120">
               <DataGridTemplateColumn.CellTemplate>
                 <DataTemplate>
-                  <TextBlock Text="{Binding line}"
-                             TextWrapping="Wrap" />
+                  <TextBlock Text="{Binding line}" TextWrapping="Wrap" />
                 </DataTemplate>
               </DataGridTemplateColumn.CellTemplate>
             </DataGridTemplateColumn>
-            <DataGridTemplateColumn Header="cost"
-                                    Width="40">
+            <DataGridTemplateColumn Header="cost" Width="40">
               <DataGridTemplateColumn.CellTemplate>
                 <DataTemplate>
-                  <TextBlock Text="{Binding cost}"
-                             TextWrapping="Wrap" />
+                  <TextBlock Text="{Binding cost}" TextWrapping="Wrap" />
                 </DataTemplate>
               </DataGridTemplateColumn.CellTemplate>
             </DataGridTemplateColumn>
@@ -170,76 +111,60 @@
         </DataGrid>
       </StackPanel>
     </StackPanel>
-    <ScrollViewer Grid.Column="0"
-                  Grid.Row="0"
-                  VerticalScrollBarVisibility="Visible"
-                  HorizontalScrollBarVisibility="Visible">
-      <Canvas Height="1700"
-              Width="600"
-              Name="testcanvas"
-              RenderTransformOrigin="0.5,0.35">
+    <ScrollViewer Grid.Column="0" Grid.Row="0" VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Visible">
+      <Canvas Height="1000" Width="600" Name="testcanvas" RenderTransformOrigin="0.5,0.22">
         <Canvas.RenderTransform>
           <TransformGroup>
-            <ScaleTransform ScaleY="-1"
-                            ScaleX="1" />
+            <ScaleTransform ScaleY="-1" ScaleX="1" />
           </TransformGroup>
         </Canvas.RenderTransform>
       </Canvas>
     </ScrollViewer>
-    <StackPanel Grid.Row="0"
-                Grid.Column="1"
-                Margin="10"
-                Grid.RowSpan="2">
+    <StackPanel Grid.Row="0" Grid.Column="1" Margin="10" Grid.RowSpan="2">
       <StackPanel.Resources>
         <Style TargetType="{x:Type DataGrid}">
-          <Setter Property="Margin"
-                  Value="0,15,0,0" />
-          <Setter Property="MinRowHeight"
-                  Value="30">
+          <Setter Property="Margin" Value="0,15,0,0" />
+          <Setter Property="MinRowHeight" Value="30">
           </Setter>
-          <Setter Property="Height"
-                  Value="250" />
+          <Setter Property="Height" Value="250" />
         </Style>
 
       </StackPanel.Resources>
-      <DataGrid Name="PointGrid"
-                ItemsSource="{Binding Points, IsAsync=True, Mode=OneWay}">
-      </DataGrid>
-      <DataGrid Name="LineGrid"
-                ItemsSource="{Binding Lines, IsAsync=True, Mode=OneWay}">
-      </DataGrid>
-      <DataGrid Name="RoomGrid"
-                ItemsSource="{Binding Rooms, IsAsync=True, Mode=OneWay}"
-                AutoGenerateColumns="False">
-        <DataGrid.Columns>
-          <DataGridTemplateColumn Header="Name"
-                                  Width="65">
-            <DataGridTemplateColumn.CellTemplate>
-              <DataTemplate>
-                <TextBlock Text="{Binding Name}"
-                           TextWrapping="Wrap" />
-              </DataTemplate>
-            </DataGridTemplateColumn.CellTemplate>
-          </DataGridTemplateColumn>
-          <DataGridTemplateColumn Header="Number"
-                                  Width="50">
-            <DataGridTemplateColumn.CellTemplate>
-              <DataTemplate>
-                <TextBlock Text="{Binding Number}"
-                           TextWrapping="Wrap" />
-              </DataTemplate>
-            </DataGridTemplateColumn.CellTemplate>
-          </DataGridTemplateColumn>
-          <DataGridTemplateColumn Header="boundaryLineNames"
-                                  Width="300">
-            <DataGridTemplateColumn.CellTemplate>
-              <DataTemplate>
-                <TextBlock Text="{Binding boundaryLineNames}"
-                           TextWrapping="Wrap" />
-              </DataTemplate>
-            </DataGridTemplateColumn.CellTemplate>
-          </DataGridTemplateColumn>
-        </DataGrid.Columns>
+      <TabPanel MinHeight="300">
+        <TabItem Name="PointGridItem" Header="Points">
+          <DataGrid Name="PointGrid" ItemsSource="{Binding Points, IsAsync=True, Mode=OneWay}" />
+
+        </TabItem>
+        <TabItem Name="RoomGridItem" Header="RoomGrid">
+          <DataGrid Name="RoomGrid" ItemsSource="{Binding Rooms, IsAsync=True, Mode=OneWay}" AutoGenerateColumns="False">
+            <DataGrid.Columns>
+              <DataGridTemplateColumn Header="Name" Width="65">
+                <DataGridTemplateColumn.CellTemplate>
+                  <DataTemplate>
+                    <TextBlock Text="{Binding Name}" TextWrapping="Wrap" />
+                  </DataTemplate>
+                </DataGridTemplateColumn.CellTemplate>
+              </DataGridTemplateColumn>
+              <DataGridTemplateColumn Header="Number" Width="50">
+                <DataGridTemplateColumn.CellTemplate>
+                  <DataTemplate>
+                    <TextBlock Text="{Binding Number}" TextWrapping="Wrap" />
+                  </DataTemplate>
+                </DataGridTemplateColumn.CellTemplate>
+              </DataGridTemplateColumn>
+              <DataGridTemplateColumn Header="boundaryLineNames" Width="300">
+                <DataGridTemplateColumn.CellTemplate>
+                  <DataTemplate>
+                    <TextBlock Text="{Binding boundaryLineNames}" TextWrapping="Wrap" />
+                  </DataTemplate>
+                </DataGridTemplateColumn.CellTemplate>
+              </DataGridTemplateColumn>
+            </DataGrid.Columns>
+          </DataGrid>
+
+        </TabItem>
+      </TabPanel>
+      <DataGrid Name="LineGrid" ItemsSource="{Binding model.modelLines, UpdateSourceTrigger=Explicit, IsAsync=True, Mode=TwoWay}" CurrentCellChanged="LineGrid_OnCurrentCellChanged" SelectionChanged="LineGrid_OnSelectionChanged" SelectionMode="Single" SelectionUnit="FullRow">
       </DataGrid>
     </StackPanel>
     <!--<Rectangle Grid.Column="0"
