--- a/UIWPF/MainWindow.xaml
+++ b/UIWPF/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="UIWPF.MainWindow" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:local="clr-namespace:UIWPF" mc:Ignorable="d" Title="MainWindow" Height="1000" WindowStartupLocation="CenterScreen" Width="1000" Background="DarkSlateGray">
+﻿<Window x:Class="UIWPF.MainWindow" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:local="clr-namespace:UIWPF" mc:Ignorable="d" Title="MainWindow" Height="700" WindowStartupLocation="CenterScreen" Width="1000" Background="DarkSlateGray">
   <Window.Resources>
     <Style TargetType="Button" x:Key="DefaultButtonStyles">
       <Setter Property="Foreground" Value="Black" />
@@ -19,40 +19,97 @@
       <Setter Property="Margin" Value="0,0,0,10"></Setter>
     </Style>
   </Window.Resources>
-  <Grid>
-    <Grid.ColumnDefinitions>
-      <ColumnDefinition Width="600" />
-      <ColumnDefinition Width="300*" />
-    </Grid.ColumnDefinitions>
-    <Grid.RowDefinitions>
-      <RowDefinition MinHeight='50' Height="800*"></RowDefinition>
-      <RowDefinition MinHeight='200' Height="200"></RowDefinition>
-    </Grid.RowDefinitions>
+  <DockPanel>
+    <Separator></Separator>
+    <Menu DockPanel.Dock="Top">
+      <MenuItem Name="Simulation" Height="20" Header="_Simulation">
+        <MenuItem Header="_Start" Click="StartSimulationClick"></MenuItem>
+        <MenuItem Header="_Restart" Click="StartSimulationClick"></MenuItem>
+        <MenuItem Header="_Load selected state" Click="LoadSelectedClick"></MenuItem>
+        <MenuItem Header="_Make one step"></MenuItem>
 
-    <StackPanel Grid.Column="0" Grid.Row="1" Orientation="Horizontal">
+      </MenuItem>
+      <MenuItem Name="EditSelected" Height="20" Header="_Edit">
+        <MenuItem Header="Move _Up" Click="MoveWallClick"></MenuItem>
+        <MenuItem Header="Move _Down" Click="MoveWallClick2"></MenuItem>
+        <MenuItem Header="_Split" Click="SplitWallClick"></MenuItem>
+        <MenuItem Header="Switch _Room" Click="SwitchRoomClick"></MenuItem>
+      </MenuItem>
+    </Menu>
+    <Grid>
+      <Grid.ColumnDefinitions>
+        <ColumnDefinition Width="600" />
+        <ColumnDefinition Width="200*" />
+      </Grid.ColumnDefinitions>
+      <Grid.RowDefinitions>
+        <RowDefinition MinHeight='50' Height="400*"></RowDefinition>
+        <RowDefinition MinHeight='200' Height="200"></RowDefinition>
+      </Grid.RowDefinitions>
 
-      <StackPanel Grid.Column="0" Grid.Row="1" Margin="10" Width="100">
+      <ScrollViewer Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
+        <Canvas Name="testcanvas" RenderTransformOrigin="0.5,0.4">
+          <Canvas.RenderTransform>
+            <TransformGroup>
+              <ScaleTransform ScaleY="-0.7" ScaleX="0.7" />
+            </TransformGroup>
+          </Canvas.RenderTransform>
+        </Canvas>
+      </ScrollViewer>
+      <StackPanel Grid.Row="0" Grid.Column="1" Margin="10" Grid.RowSpan="2">
         <StackPanel.Resources>
-          <Style TargetType="{x:Type Button}">
-            <Setter Property="Margin" Value="0,10,0,0" />
-            <Setter Property="Height" Value="25"></Setter>
-            <Setter Property="Background" Value="DarkGray">
-
+          <Style TargetType="{x:Type DataGrid}">
+            <Setter Property="MinRowHeight" Value="30">
             </Setter>
+            <Setter Property="MinHeight" Value="250" />
+            <Setter Property="MaxHeight" Value="400" />
           </Style>
-        </StackPanel.Resources>
-        <Button Content="Start Simulation" Click='StartSimulationClick'></Button>
-        <Button Content="Move Wall +" Click='MoveWallClick'></Button>
-        <Button Content="Move Wall -" Click='MoveWallClick2'></Button>
-        <Button Content="Split Wall" Click='SplitWallClick'></Button>
-        <Button Content="Switch Room" Click='SwitchRoomClick'></Button>
-        <Button Content="Load selected Room" Click='LoadSelectedClick'></Button>
-        <Button Content="Make Simulation step">
-        </Button>
 
-      </StackPanel>
-      <StackPanel Grid.Column="0" Grid.Row="1" MaxHeight="300" Orientation='Horizontal'>
-        <DataGrid x:Name="CostGrid" ItemsSource="{Binding SimulationCosts, IsAsync=True, Mode=OneWay}" AutoGenerateColumns="False" VerticalScrollBarVisibility="Visible" MaxHeight='280' SelectionChanged='CostGrid_SelectionChanged' MouseDoubleClick="CostGrid_OnMouseDoubleClick">
+        </StackPanel.Resources>
+
+        <TabControl MinHeight="300">
+          <TabItem Name="PointGridItem" Header="Points">
+            <DataGrid Name="PointGrid" ItemsSource="{Binding Points, IsAsync=True, Mode=OneWay}" />
+
+          </TabItem>
+          <TabItem Name="RoomGridItem" Header="RoomGrid">
+            <DataGrid Name="RoomGrid" ItemsSource="{Binding Rooms, IsAsync=True, Mode=OneWay}" AutoGenerateColumns="False">
+              <DataGrid.Columns>
+                <DataGridTemplateColumn Header="Name" Width="65">
+                  <DataGridTemplateColumn.CellTemplate>
+                    <DataTemplate>
+                      <TextBlock Text="{Binding Name}" TextWrapping="Wrap" />
+                    </DataTemplate>
+                  </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+                <DataGridTemplateColumn Header="Number" Width="50">
+                  <DataGridTemplateColumn.CellTemplate>
+                    <DataTemplate>
+                      <TextBlock Text="{Binding Number}" TextWrapping="Wrap" />
+                    </DataTemplate>
+                  </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+                <DataGridTemplateColumn Header="boundaryLineNames" Width="300">
+                  <DataGridTemplateColumn.CellTemplate>
+                    <DataTemplate>
+                      <TextBlock Text="{Binding boundaryLineNames}" TextWrapping="Wrap" />
+                    </DataTemplate>
+                  </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+              </DataGrid.Columns>
+            </DataGrid>
+
+          </TabItem>
+          <TabItem Name="LineGridItem" Header="LineGrid" Visibility="Visible" IsEnabled="True" IsSelected="True">
+            <DataGrid Name="LineGrid" ItemsSource="{Binding model.modelLines, IsAsync=True, Mode=TwoWay, UpdateSourceTrigger=Explicit}" CurrentCellChanged="LineGrid_OnCurrentCellChanged" SelectionChanged="LineGrid_OnSelectionChanged" SelectionMode="Single" SelectionUnit="FullRow">
+            </DataGrid>
+
+          </TabItem>
+        </TabControl>
+
+        <TabControl MinHeight="300">
+          <TabItem Header="costgrid">
+
+        <DataGrid x:Name="CostGrid" ItemsSource="{Binding SimulationCosts, IsAsync=True, Mode=OneWay}" AutoGenerateColumns="False" VerticalScrollBarVisibility="Visible" MaxHeight='280' SelectionChanged='CostGrid_SelectionChanged' MouseDoubleClick="CostGrid_OnMouseDoubleClick" Height='200' Margin='0,0,0,0'>
           <DataGrid.Columns>
             <DataGridTemplateColumn Header="Index" Width="40">
               <DataGridTemplateColumn.CellTemplate>
@@ -84,7 +141,9 @@
             </DataGridTemplateColumn>
           </DataGrid.Columns>
         </DataGrid>
-        <DataGrid x:Name="CostGrid2" ItemsSource="{Binding LineAndCostActualStep, IsAsync=True, Mode=OneWay}" AutoGenerateColumns="False" VerticalScrollBarVisibility="Visible" MaxHeight='280'>
+          </TabItem>
+          <TabItem Header="costgrid2">
+        <DataGrid x:Name="CostGrid2" ItemsSource="{Binding LineAndCostActualStep, IsAsync=True, Mode=OneWay}" AutoGenerateColumns="False" VerticalScrollBarVisibility="Visible" MaxHeight='280' Height='200' Margin='0,0,0,0'>
           <DataGrid.Columns>
             <DataGridTemplateColumn Header="Index" Width="40">
               <DataGridTemplateColumn.CellTemplate>
@@ -109,73 +168,11 @@
             </DataGridTemplateColumn>
           </DataGrid.Columns>
         </DataGrid>
+
+          </TabItem>
+        </TabControl>
       </StackPanel>
-    </StackPanel>
-    <ScrollViewer Grid.Column="0" Grid.Row="0" VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Visible">
-      <Canvas Height="1000" Width="600" Name="testcanvas" RenderTransformOrigin="0.5,0.22">
-        <Canvas.RenderTransform>
-          <TransformGroup>
-            <ScaleTransform ScaleY="-1" ScaleX="1" />
-          </TransformGroup>
-        </Canvas.RenderTransform>
-      </Canvas>
-    </ScrollViewer>
-    <StackPanel Grid.Row="0" Grid.Column="1" Margin="10" Grid.RowSpan="2">
-      <StackPanel.Resources>
-        <Style TargetType="{x:Type DataGrid}">
-          <Setter Property="Margin" Value="0,15,0,0" />
-          <Setter Property="MinRowHeight" Value="30">
-          </Setter>
-          <Setter Property="Height" Value="250" />
-        </Style>
 
-      </StackPanel.Resources>
-      <TabPanel MinHeight="300">
-        <TabItem Name="PointGridItem" Header="Points">
-          <DataGrid Name="PointGrid" ItemsSource="{Binding Points, IsAsync=True, Mode=OneWay}" />
-
-        </TabItem>
-        <TabItem Name="RoomGridItem" Header="RoomGrid">
-          <DataGrid Name="RoomGrid" ItemsSource="{Binding Rooms, IsAsync=True, Mode=OneWay}" AutoGenerateColumns="False">
-            <DataGrid.Columns>
-              <DataGridTemplateColumn Header="Name" Width="65">
-                <DataGridTemplateColumn.CellTemplate>
-                  <DataTemplate>
-                    <TextBlock Text="{Binding Name}" TextWrapping="Wrap" />
-                  </DataTemplate>
-                </DataGridTemplateColumn.CellTemplate>
-              </DataGridTemplateColumn>
-              <DataGridTemplateColumn Header="Number" Width="50">
-                <DataGridTemplateColumn.CellTemplate>
-                  <DataTemplate>
-                    <TextBlock Text="{Binding Number}" TextWrapping="Wrap" />
-                  </DataTemplate>
-                </DataGridTemplateColumn.CellTemplate>
-              </DataGridTemplateColumn>
-              <DataGridTemplateColumn Header="boundaryLineNames" Width="300">
-                <DataGridTemplateColumn.CellTemplate>
-                  <DataTemplate>
-                    <TextBlock Text="{Binding boundaryLineNames}" TextWrapping="Wrap" />
-                  </DataTemplate>
-                </DataGridTemplateColumn.CellTemplate>
-              </DataGridTemplateColumn>
-            </DataGrid.Columns>
-          </DataGrid>
-
-        </TabItem>
-      </TabPanel>
-      <DataGrid Name="LineGrid" ItemsSource="{Binding model.modelLines, UpdateSourceTrigger=Explicit, IsAsync=True, Mode=TwoWay}" CurrentCellChanged="LineGrid_OnCurrentCellChanged" SelectionChanged="LineGrid_OnSelectionChanged" SelectionMode="Single" SelectionUnit="FullRow">
-      </DataGrid>
-    </StackPanel>
-    <!--<Rectangle Grid.Column="0"
-               Grid.Row="0"
-               Width="500"
-               Height="500"
-               Stroke='Black'>
-      <Rectangle.Fill>
-        <SolidColorBrush Color='#FFFFD1D1'
-                         Opacity='0.5' />
-      </Rectangle.Fill>
-    </Rectangle>-->
-  </Grid>
+    </Grid>
+  </DockPanel>
 </Window>
