--- a/UIWPF/MainWindow.xaml
+++ b/UIWPF/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="UIWPF.MainWindow" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:local="clr-namespace:UIWPF" mc:Ignorable="d" Title="MainWindow" Height="700" WindowStartupLocation="CenterScreen" Width="1000" Background="DarkSlateGray">
+﻿<Window x:Class="UIWPF.MainWindow" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:local="clr-namespace:UIWPF" mc:Ignorable="d" Title="MainWindow" Height="700" WindowStartupLocation="CenterScreen" Width="1000" Background="#444444">
   <Window.Resources>
     <Style TargetType="Button" x:Key="DefaultButtonStyles">
       <Setter Property="Foreground" Value="Black" />
@@ -24,7 +24,8 @@
     <Menu DockPanel.Dock="Top">
       <MenuItem Name="Simulation" Height="20" Header="_Simulation">
         <MenuItem Header="_Start" Click="StartSimulationClick"></MenuItem>
-        <MenuItem Header="_Restart" Click="ReStartSimulationClick"></MenuItem>
+        <MenuItem Header="_Load Simple model" Click="LoadSimpleModelClick"></MenuItem>
+        <MenuItem Header="_Load Normal model" Click="LoadNormalModelClick"></MenuItem>
         <MenuItem Header="_Load selected state" Click="LoadSelectedClick"></MenuItem>
         <MenuItem Header="_Make one step"></MenuItem>
 
@@ -38,7 +39,7 @@
     </Menu>
     <Grid>
       <Grid.ColumnDefinitions>
-        <ColumnDefinition Width="600*" />
+        <ColumnDefinition Width="500" />
         <ColumnDefinition Width="300*" />
       </Grid.ColumnDefinitions>
       <Grid.RowDefinitions>
@@ -111,7 +112,9 @@
 
           </TabItem>
           <TabItem Name="RoomTypes" Header="RoomTypes">
-            <DataGrid Name="RoomTypesGrid" ItemsSource="{Binding roomtypes, IsAsync=True, Mode=OneWay}" />
+            <DataGrid Name="RoomTypesGrid" ItemsSource="{Binding roomtypes, IsAsync=True, Mode=OneWay}">
+
+            </DataGrid>
 
           </TabItem>
         </TabControl>
